# practice-doxygen

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile
src/: CMakeLists.txt  main.cpp  point.cpp  point.h  rectangle.cpp  shape.cpp  shapefactory.cpp  shapefactory.h  triangle.cpp
